Add description of document

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
 	<title>Photographe Nina Carducci</title>
+	<meta name="description" content="Portfolio et services proposés par la photographe Nina Carducci.">
 </head>
 <body>
 <div class="top-header">
