--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta name="description" content="Portfolio et services proposés par la photographe Nina Carducci.">
 </head>
 <body>
-<div class="top-header">
+<header class="top-header">
 	<h3 class="name">Nina Carducci</h3>
 	<div class="nav">   
 		<ul>
@@ -27,7 +27,7 @@
 			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.webp" alt="Logo Instagram"></a></li>
 		</ul>
 	</div>
-</div>
+</header>
 <div id="header">
 
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
