--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</button>
 	</div>
 </div>
-<div id="about">
+<main>
 	<div class="picture left">
 		<img src="./assets/images/nina.webp" alt="Photographie de Nina">
 	</div>
@@ -155,6 +155,6 @@
 			<img src="./assets/images/camera.webp" alt="Caméra">
 		</div>
 	</div>
-</div>
+</main>
 </body>
 </html>
