Add aria-label attribute to links

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	<h1 class="name">Nina Carducci</h1>
 	<nav class="nav">
 		<ul>
-			<li><a href="#about">À propos</a></li>
-			<li><a href="#gallery">Galerie</a></li>
-			<li><a href="#services">Service</a></li>
-			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.webp" alt="Logo Instagram"></a></li>
+			<li><a href="#about" aria-label="Aller à la section À propos">À propos</a></li>
+			<li><a href="#gallery" aria-label="Aller à la section Galerie">Galerie</a></li>
+			<li><a href="#services" aria-label="Aller à la section Services">Service</a></li>
+			<li><a href="#contact" aria-label="Aller à la section Contact">Contact</a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" aria-label="En savoir plus sur moi sur Instagram"><img src="assets/images/instagram.webp" alt="Logo Instagram"></a></li>
 		</ul>
 	</nav>
 </header>
