--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 	<title>Photographe Nina Carducci</title>
 	<meta name="description" content="Portfolio et services proposés par la photographe Nina Carducci.">
 </head>
-<body>
-<header class="top-header">
+<body class="m-auto">
+<header class="top-header bg-white d-flex position-sticky align-items-center">
 	<h1 class="name">Nina Carducci</h1>
 	<nav class="nav">
-		<ul>
-			<li><a href="#about" aria-label="Aller à la section À propos">À propos</a></li>
-			<li><a href="#gallery" aria-label="Aller à la section Galerie">Galerie</a></li>
-			<li><a href="#services" aria-label="Aller à la section Services">Service</a></li>
-			<li><a href="#contact" aria-label="Aller à la section Contact">Contact</a></li>
+		<ul class="d-flex nav">
+			<li><a class="text-decoration-none" href="#about" aria-label="Aller à la section À propos">À propos</a></li>
+			<li><a class="text-decoration-none" href="#gallery" aria-label="Aller à la section Galerie">Galerie</a></li>
+			<li><a class="text-decoration-none" href="#services" aria-label="Aller à la section Services">Service</a></li>
+			<li><a class="text-decoration-none" href="#contact" aria-label="Aller à la section Contact">Contact</a></li>
 			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" aria-label="En savoir plus sur moi sur Instagram"><img src="assets/images/instagram.webp" alt="Logo Instagram"></a></li>
 		</ul>
 	</nav>
@@ -57,45 +57,45 @@
 	</div>
 </div>
 <main>
-<section id="about">
+<section id="about" class="d-flex position-relative align-items-center">
 	<div class="picture left">
-		<img src="./assets/images/nina.webp" alt="Photographie de Nina">
+		<img class="w-100" src="./assets/images/nina.webp" alt="Photographie de Nina">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
-		<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
+		<p class="about-me__introduction fst-italic">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
 </section>
 <section id="gallery">
-	<h2 class="title">Portfolio</h2>
+	<h2 class="title text-center">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Concert dans un stade"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Représentant d'une entreprise"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Réunion en entreprise"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Mariés s'échangeant leurs voeux"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait tête-épaules de face d'un homme fermant fortement les yeux "/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Mariés avant le lancer du bouquet"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait buste de face d'une femme"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur animant le public"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Femme riant à son bureau en entreprise"/>
+			<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Concert dans un stade"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Représentant d'une entreprise"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Réunion en entreprise"/>
+			<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Mariés s'échangeant leurs voeux"/>
+			<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait tête-épaules de face d'un homme fermant fortement les yeux "/>
+			<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Mariés avant le lancer du bouquet"/>
+			<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait buste de face d'une femme"/>
+			<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur animant le public"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Femme riant à son bureau en entreprise"/>
 		</div>
 	</div>
-	<div class="quote">
+	<div class="quote fst-italic m-auto">
 		<figure>
 			<blockquote>
-				<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
+				<p class="quote__text fst-italic fw-light">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
 	</div>
 </section>
-<section id="services">
-	<h2 class="title">Mes services</h2>
-	<div class="container">
-		<article class="service">
+<section id="services" class="m-auto position-relative">
+	<h2 class="title text-center">Mes services</h2>
+	<div class="container d-flex align-items-center">
+		<article class="service bg-white d-flex flex-column">
 			<div class="service__description">
 				<h3>Shooting photo</h3>
 				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
@@ -106,7 +106,7 @@
 			</div>
 
 		</article>
-		<article class="service">
+		<article class="service bg-white d-flex flex-column">
 			<div class="service__description">
 				<h3>Retouches</h3>
 				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
@@ -116,7 +116,7 @@
 				<span>2 AR par photo</span>
 			</div>
 		</article>
-		<article class="service">
+		<article class="service bg-white d-flex flex-column">
 			<div class="service__description">
 				<h3>Album photos</h3>
 				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
@@ -128,31 +128,31 @@
 		</article>
 	</div>
 </section>
-<div class="quote">
+<div class="quote fst-italic m-auto">
 	<figure>
 		<blockquote>
-			<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
+			<p class="quote__text fst-italic fw-light">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
 		</blockquote>
 		<figcaption class="quote__author">- Richard Avedon</figcaption>
 	</figure>
 </div>
-<section id="contact">
-	<div class="container">
+<section id="contact" class="m-auto position-relative">
+	<div class="container d-flex align-items-center">
 		<div class="form-container">
 			<h3>Une question ? Une demande de devis ?</h3>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-			<form action="" method="post">
+			<form action="" method="post" class="d-flex flex-column align-items-start">
 				<label for="nom">Nom</label>
-				<input type="text" name="nom" id="nom">
+				<input type="text" name="nom" id="nom" class="bg-transparent w-100">
 				<label for="email">Email</label>
-				<input type="email" name="email" id="email">
+				<input type="email" name="email" id="email" class="bg-transparent w-100">
 				<label for="message">Message</label>
-				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
+				<textarea name="message" id="message" class="bg-transparent w-100" cols="30" rows="10"></textarea>
+				<input class="w-100" type="submit" value="Envoyer"/>
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.webp" alt="Caméra">
+			<img class="w-100" src="./assets/images/camera.webp" alt="Caméra">
 		</div>
 	</div>
 </section>
