Add information of the author

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 	<script src="./assets/scripts.js"></script>
 	<title>Photographe Nina Carducci</title>
 	<meta name="description" content="Portfolio et services proposés par la photographe Nina Carducci.">
+	<meta itemprop="name" content="Photographe Nina Carducci">
+	<meta itemprop="description" content="Portfolio et services proposés par la photographe Nina Carducci.">
+	<meta itemprop="image" content="https://christellaa.github.io/ninacarducci/">
+	<meta property="og:title" content="Photographe Nina Carducci"/>
+	<meta property="og:type" content="page"/>
+	<meta property="og:url" content="https://christellaa.github.io/ninacarducci/"/>
+	<meta property="og:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.webp"/>
+	<meta property="og:description" content="Portfolio et services proposés par la photographe Nina Carducci."/>
+	<meta property="author" content="Nina Carducci" />
+	<meta name="twitter:creator" content="Nina Carducci">
+	<meta name="twitter:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.webp">
+	<meta name="twitter:image:alt" content="Photographie de Nina Carducci">
 </head>
 <body class="m-auto">
 <header class="top-header bg-white d-flex position-sticky align-items-center">
@@ -154,6 +166,14 @@
 		<div class="picture right">
 			<img class="w-100" src="./assets/images/camera.webp" alt="Caméra">
 		</div>
+	</div>
+	<div class="information">
+		<address>Adresse: 68 avenue Alsace-Lorraine,
+			<br/>
+			33200 Bordeaux
+			<br/>
+			Téléphone: 05 56 67 78 89</address>
+		<p>Je suis disponible au téléphone du lundi au vendredi, de <time>10h</time> à <time>19h</time>.</p>
 	</div>
 </section>
 </main>
