--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme marchant sur un passage piéton">
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100 carousel-wh" alt="Homme marchant sur un passage piéton">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Public acclamant l'animateur">
+				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100 carousel-wh" alt="Public acclamant l'animateur">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Scène de mariage">
+				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100 carousel-wh" alt="Scène de mariage">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -59,7 +59,7 @@
 <main>
 <section id="about" class="d-flex position-relative align-items-center">
 	<div class="picture left">
-		<img class="w-100" src="./assets/images/nina.webp" alt="Photographie de Nina">
+		<img class="w-100 pic-left-wh" src="./assets/images/nina.webp" alt="Photographie de Nina">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -72,15 +72,15 @@
 	<h2 class="title text-center">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Concert dans un stade"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Représentant d'une entreprise"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Réunion en entreprise"/>
-			<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Mariés s'échangeant leurs voeux"/>
-			<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait tête-épaules de face d'un homme fermant fortement les yeux "/>
-			<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Mariés avant le lancer du bouquet"/>
-			<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait buste de face d'une femme"/>
-			<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur animant le public"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Femme riant à son bureau en entreprise"/>
+			<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Concert dans un stade"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Représentant d'une entreprise"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Réunion en entreprise"/>
+			<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Mariés s'échangeant leurs voeux"/>
+			<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait tête-épaules de face d'un homme fermant fortement les yeux "/>
+			<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Mariés avant le lancer du bouquet"/>
+			<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait buste de face d'une femme"/>
+			<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur animant le public"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Femme riant à son bureau en entreprise"/>
 		</div>
 	</div>
 	<div class="quote fst-italic m-auto">
@@ -152,7 +152,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img class="w-100" src="./assets/images/camera.webp" alt="Caméra">
+			<img class="w-100 pic-right-wh" src="./assets/images/camera.webp" alt="Caméra">
 		</div>
 	</div>
 </section>
