--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	<meta property="og:title" content="Photographe Nina Carducci"/>
 	<meta property="og:type" content="page"/>
 	<meta property="og:url" content="https://christellaa.github.io/ninacarducci/"/>
-	<meta property="og:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.webp"/>
+	<meta property="og:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.jpg"/>
 	<meta property="og:description" content="Portfolio et services proposés par la photographe Nina Carducci."/>
 	<meta property="author" content="Nina Carducci" />
 	<meta name="twitter:creator" content="Nina Carducci">
-	<meta name="twitter:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.webp">
+	<meta name="twitter:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.jpg">
 	<meta name="twitter:image:alt" content="Photographie de Nina Carducci">
 </head>
 <body class="m-auto">
