Change text from 3rd pov to 1st pov

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
-	<title>Photographe Nina Carducci</title>
-	<meta name="description" content="Portfolio et services proposés par la photographe Nina Carducci.">
-	<meta itemprop="name" content="Photographe Nina Carducci">
-	<meta itemprop="description" content="Portfolio et services proposés par la photographe Nina Carducci.">
+	<title>Nina Carducci</title>
+	<meta name="description" content="Photographe passionée, je mets à disposition mon portfolio et je propose différents services selon certains critères.">
+	<meta itemprop="name" content="Nina Carducci">
+	<meta itemprop="description" content="Photographe passionée, je mets à disposition mon portfolio et je propose différents services selon certains critères.">
 	<meta itemprop="image" content="https://christellaa.github.io/ninacarducci/">
-	<meta property="og:title" content="Photographe Nina Carducci"/>
+	<meta property="og:title" content="Nina Carducci"/>
 	<meta property="og:type" content="page"/>
 	<meta property="og:url" content="https://christellaa.github.io/ninacarducci/"/>
 	<meta property="og:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.jpg"/>
-	<meta property="og:description" content="Portfolio et services proposés par la photographe Nina Carducci."/>
+	<meta property="og:description" content="Photographe passionée, je mets à disposition mon portfolio et je propose différents services selon certains critères."/>
 	<meta property="author" content="Nina Carducci" />
 	<meta name="twitter:creator" content="Nina Carducci">
 	<meta name="twitter:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.jpg">
-	<meta name="twitter:image:alt" content="Photographie de Nina Carducci">
+	<meta name="twitter:image:alt" content="Photographie de l'autheur du site, Nina Carducci">
 </head>
 <body class="m-auto">
 <header class="top-header bg-white d-flex position-sticky align-items-center">
