Add logo script

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "Organization",
+		  "url": "https://christellaa.github.io/ninacarducci/",
+		  "logo": "https://christellaa.github.io/ninacarducci/assets/images/nina.jpg"
+		}
+	</script>
 	<title>Nina Carducci</title>
 	<meta name="description" content="Photographe passionée, je mets à disposition mon portfolio et je propose différents services selon certains critères.">
 	<meta itemprop="name" content="Nina Carducci">
