Add gallery script

--- a/index.html
+++ b/index.html
@@ -20,6 +20,116 @@
 		  "logo": "https://christellaa.github.io/ninacarducci/assets/images/nina.jpg"
 		}
 	</script>
+	<script type="application/ld+json">
+		{
+		  "@context":"https://schema.org/",
+		  "@type":"Dataset",
+		  "name":"Gallerie",
+		  "description":"Galerie de photographies que j'ai prises durant ma carrière",
+		  "keywords":[
+			 "Concert",
+			 "Entreprises",
+			 "Mariages",
+			 "Portrait"
+		  ],
+		  "creator":{
+			"@type":"Organization",
+			"name": "Nina Carducci"
+		 },
+		  "hasPart" : [
+			{
+			  "@type": "Dataset",
+			  "name": "Photographie 01",
+			  "description": "Photographie d'un concert dans un stade rempli de monde",
+			  "image": "https://christellaa.github.io/ninacarducci/assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg",
+          	  "creator":{
+              	"@type":"Organization",
+              	"name": "Nina Carducci"
+          	  }
+			},
+			{
+			  "@type": "Dataset",
+			  "name": "Photographie 02",
+			  "description": "Photographie de face d'un représentant d'une entreprise",
+			  "image": "https://christellaa.github.io/ninacarducci/assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg",
+			  "creator":{
+				"@type":"Organization",
+				"name": "Nina Carducci"
+			  }
+			},
+			{
+			  "@type": "Dataset",
+			  "name": "Photographie 03",
+			  "description": "Photographie d'une femme souriant lors d'une réunion en entreprise",
+			  "image": "https://christellaa.github.io/ninacarducci/assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg",
+			  "creator":{
+				"@type":"Organization",
+				"name": "Nina Carducci"
+			  }
+			},
+			{
+			  "@type": "Dataset",
+			  "name": "Photographie 04",
+			  "description": "Photographie des mains de mariés s'échangeant leurs vœux",
+			  "image": "https://christellaa.github.io/ninacarducci/assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg",
+			  "creator":{
+				"@type":"Organization",
+				"name": "Nina Carducci"
+			  }
+			},
+			{
+			  "@type": "Dataset",
+			  "name": "Photographie 05",
+			  "description": "Portrait tête-épaules de face d'un homme fermant fortement les yeux",
+			  "image": "https://christellaa.github.io/ninacarducci/assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg",
+			  "creator":{
+				"@type":"Organization",
+				"name": "Nina Carducci"
+			  }
+			},
+			{
+			  "@type": "Dataset",
+			  "name": "Photographie 06",
+			  "description": "Photographie des mariés avant le lancer du bouquet",
+			  "image": "https://christellaa.github.io/ninacarducci/assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg",
+			  "creator":{
+				"@type":"Organization",
+				"name": "Nina Carducci"
+			  }
+			},
+			{
+			  "@type": "Dataset",
+			  "name": "Photographie 07",
+			  "description": "Portrait buste de face d'une femme se tenant derrière des grilles",
+			  "image": "https://christellaa.github.io/ninacarducci/assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg",
+			  "creator":{
+				"@type":"Organization",
+				"name": "Nina Carducci"
+			  }
+			},
+			{
+			  "@type": "Dataset",
+			  "name": "Photographie 08",
+			  "description": "Photographie d'un chanteur animant le public en levant sa main",
+			  "image": "https://christellaa.github.io/ninacarducci/assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg",
+			  "creator":{
+				"@type":"Organization",
+				"name": "Nina Carducci"
+			  }
+			},
+			{
+			  "@type": "Dataset",
+			  "name": "Photographie 09",
+			  "description": "Photographie d'une femme riant à son bureau en entreprise",
+			  "image": "https://christellaa.github.io/ninacarducci/assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg",
+			  "creator":{
+				"@type":"Organization",
+				"name": "Nina Carducci"
+			  }
+			}
+		  ]
+		}
+	</script>
 	<title>Nina Carducci</title>
 	<meta name="description" content="Photographe passionée, je mets à disposition mon portfolio et je propose différents services selon certains critères.">
 	<meta itemprop="name" content="Nina Carducci">
