Add file to form action

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 		<div class="form-container">
 			<h2>Une question ? Une demande de devis ?</h2>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-			<form action="" method="post" class="d-flex flex-column align-items-start">
+			<form action="data.php" method="post" class="d-flex flex-column align-items-start">
 				<label for="nom">Nom</label>
 				<input type="text" name="nom" id="nom" class="bg-transparent w-100">
 				<label for="email">Email</label>
