Add itemscope for metadatas

--- a/index.html
+++ b/index.html
@@ -133,18 +133,20 @@
 		<title>Nina Carducci</title>
 		<meta name="description" content="Photographe passionée, je mets à disposition mon portfolio et je propose différents services selon certains critères.">
 		<!-- metas for cards when shared in social network -->
-		<meta itemprop="name" content="Nina Carducci">
-		<meta itemprop="description" content="Photographe passionée, je mets à disposition mon portfolio et je propose différents services selon certains critères.">
-		<meta itemprop="image" content="https://christellaa.github.io/ninacarducci/">
-		<meta property="og:title" content="Nina Carducci">
-		<meta property="og:type" content="page">
-		<meta property="og:url" content="https://christellaa.github.io/ninacarducci/">
-		<meta property="og:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.jpg">
-		<meta property="og:description" content="Photographe passionée, je mets à disposition mon portfolio et je propose différents services selon certains critères.">
-		<meta property="author" content="Nina Carducci">
-		<meta name="twitter:creator" content="Nina Carducci">
-		<meta name="twitter:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.jpg">
-		<meta name="twitter:image:alt" content="Photographie de l'autheur du site, Nina Carducci">
+		<html itemscope itemtype="http://schema.org/WebPage">
+			<meta itemprop="name" content="Nina Carducci">
+			<meta itemprop="description" content="Photographe passionée, je mets à disposition mon portfolio et je propose différents services selon certains critères.">
+			<meta itemprop="image" content="https://christellaa.github.io/ninacarducci/">
+			<meta property="og:title" content="Nina Carducci">
+			<meta property="og:type" content="page">
+			<meta property="og:url" content="https://christellaa.github.io/ninacarducci/">
+			<meta property="og:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.jpg">
+			<meta property="og:description" content="Photographe passionée, je mets à disposition mon portfolio et je propose différents services selon certains critères.">
+			<meta property="author" content="Nina Carducci">
+			<meta name="twitter:creator" content="Nina Carducci">
+			<meta name="twitter:image" content="https://christellaa.github.io/ninacarducci/assets/images/nina.jpg">
+			<meta name="twitter:image:alt" content="Photographie de l'autheur du site, Nina Carducci">
+		</html>
 	</head>
 	<body class="m-auto">
 		<header class="top-header bg-white d-flex position-sticky align-items-center">
